# ExtractPatches

./: .gitignore  CMakeLists.txt  README.md  createTSVFromFolder.py  main.cpp
functions/: extractpatches.hpp  getpatchesaloneinsubfolders.hpp  getpatchesfromcolordata.hpp  getpatchesfromgraydata.hpp  getpatchesfromgrayscaleAndgtdata.hpp  getpatchesfromgrayscaledata.hpp  iscolor.hpp
headers/: globalvar.hpp  headers.hpp
optional_py35/: createTSVFromFolder.py
